fix: organização files css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/style-navbar.css" />
+    <link rel="stylesheet" href="./assets/css/style-home.css" />
     <link rel="stylesheet" href="./assets/css/style-sobre.css" />
     <link rel="stylesheet" href="./assets/css/style-habilidade.css" />
     <link rel="stylesheet" href="./assets/css/style-projetos.css" />
@@ -67,7 +68,7 @@
     </header>
 
     <div class="principal" id="home">
-      <div class="meunome">
+      <div class="home-image">
         <img src="assets/images/logo/ramON_2.svg" />
         <h3>Desenvolvedor Web</h3>
       </div>
