--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#" title="Logo" class="logo">
               <img
                 style="width: 100%; height: 30px"
-                src="assets/images/logo/iconizer-rr2.svg"
+                src="assets/images/logo/rr.svg"
               />
             </a>
             <img
@@ -69,7 +69,7 @@
 
     <div class="principal" id="home">
       <div class="home-image">
-        <img src="assets/images/logo/ramON_2.svg" />
+        <img src="assets/images/logo/ramON.svg" />
         <h3>Desenvolvedor Web</h3>
       </div>
     </div>
